--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://mova:mova@localhost/mova_user"
+DATABASE_URL="postgresql+asyncpg://mova:mova@localhost/mova_user"
 JWT_SECRET_KEY ="3d%JHk9!@fHq9&78Ghj#Jkl!mpwdwQZx@"
 RABBITMQ_URL="amqp://guest:guest@localhost:5672/"
