--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.9.0",
-    "expo": "~53.0.9",
+    "dotenv": "^17.2.1",
+    "env": "^0.0.2",
+    "expo": "^54.0.0",
     "expo-linear-gradient": "^14.1.5",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.522.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-linear-gradient": "^2.8.3",
@@ -38,10 +43,15 @@
     "react-native-screens": "~4.10.0",
     "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^10.2.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@expo/vector-icons": "^15.0.2",
+    "expo-asset": "~12.0.8",
+    "expo-font": "~14.0.8",
+    "expo-dev-client": "~6.0.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-preset-expo": "^54.0.1"
   },
   "private": true
 }
