--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_URL="postgresql+asyncpg://mova:mova@localhost/mova_trip"
 JWT_SECRET_KEY ="3d%JHk9!@fHq9&78Ghj#Jkl!mpwdwQZx@"
 RABBITMQ_URL="amqp://guest:guest@localhost:5672/"
+QUEUE_NAME=trip_update_queue
+TRIP_QUEUE_NAME=trip_update_queue
